gl33-master/src/test/deca/context/invalid/other/affectation_float_int.deca
// Invalid test
// Affectation d'un flottant à un int

{
   int n;
   float x;

   n = x;
   n = 1.3;
}
